fixed alignment of social icons on blog listing page

--- a/blocks/social-media-buttons/social-media-buttons.css
+++ b/blocks/social-media-buttons/social-media-buttons.css
@@ -1,5 +1,8 @@
 .section .social-media-buttons-wrapper {
   margin-bottom: 50px;
+}
+
+.section:not(.sidebar) .social-media-buttons-wrapper {
   padding: 0;
 }
 
